fix: :bug: Adjust Card component padding and gap for better layout consistency

--- a/src/app/_views/Work/_components/Card/card.module.scss
+++ b/src/app/_views/Work/_components/Card/card.module.scss
@@ -4,16 +4,21 @@
 
   align-items: center;
 
-  gap: 2rem;
-
+  gap: 1rem;
+  padding: 1.5rem;
   border: 1px solid #373737;
   border-radius: 2px;
 
   flex: 1;
-  padding: 2rem;
+
   transition: background-color 0.35s;
 
   text-decoration: unset;
+
+  @media (min-width: 460px) {
+    gap: 2rem;
+    padding: 2rem;
+  }
 
   &:hover {
     background-color: #252525;
